<resources>
    <string name="app_name">Assignment 5 Database</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="login_with_phone">手机号登录</string>
    <string name="find_password">找回密码</string>
    <string name="register_account">注册账号</string>
    <string name="account">账号</string>
    <string name="email">电子邮箱</string>
    <string name="passwordRepeat">重复密码</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="agreement">同意用户协议和隐私协议并继续</string>
</resources>